src/main/resources/sep/wrapper/globals.css
* {
    -std-background-color: #2b2a33ff;

    -primary-text-fill: #f5f5f5ff;

    -text-fill-error: #ff000099;
    -secondary-btn-color: #ffffff19;
    -secondary-btn-color-hover: #ffffff33;
    -danger-btn-color: #ffffff19;
    -danger-btn-color-hover: #ff000033;
}

#master-container {
    -fx-background-color: -std-background-color;
    -fx-padding: 24px 24px 24px 24px;
}

/*#region Text*/

.text-base {
    -fx-font-size: 16px;
    -fx-font-weight: 400;
    -fx-text-fill: -primary-text-fill;
}

.text-xl-error,
.text-xl {
    -fx-font-size: 24px;
    -fx-font-weight: 700;
    -fx-text-fill: -primary-text-fill;
}
.text-xl-error {
    -fx-text-fill: -text-fill-error;
}

.text-2xl {
    -fx-font-size: 48px;
    -fx-font-weight: 700;
    -fx-text-fill: -primary-text-fill;
}

/*#endregion Text*/

/*#region Buttons*/

.secondary-btn-tiny,
.secondary-btn-mini,
.secondary-btn {
    -fx-background-color: -secondary-btn-color;

    -fx-text-fill: -primary-text-fill;
    -fx-font-size: 24px;
    -fx-font-weight: 700;

    -fx-padding: 16px 48px 16px 48px;
    -fx-border-radius: 0px;
}

.secondary-btn-tiny:hover,
.secondary-btn-mini:hover,
.secondary-btn:hover {
    -fx-background-color: -secondary-btn-color-hover;

    -fx-cursor: hand;
}

.secondary-btn-mini {
    -fx-font-size: 16px;
    -fx-font-weight: 500;
    -fx-padding: 8px 24px 8px 24px;

    -fx-cursor: hand;
}

.secondary-btn-tiny {
    -fx-font-size: 12px;
    -fx-font-weight: 300;
    -fx-padding: 2px 6px 2px 6px;

    -fx-cursor: hand;
}

.danger-btn-tiny,
.danger-btn-mini,
.danger-btn {
    -fx-background-color: -danger-btn-color;

    -fx-text-fill: -primary-text-fill;
    -fx-font-size: 24px;
    -fx-font-weight: 700;

    -fx-padding: 16px 48px 16px 48px;
    -fx-border-radius: 0px;
}

.danger-btn-tiny:hover,
.danger-btn-mini:hover,
.danger-btn:hover {
    -fx-background-color: -danger-btn-color-hover;
}

.danger-btn-mini {
    -fx-font-size: 16px;
    -fx-font-weight: 500;
    -fx-padding: 8px 24px 8px 24px;

    -fx-cursor: hand;
}

.danger-btn-tiny {
    -fx-font-size: 12px;
    -fx-font-weight: 300;
    -fx-padding: 2px 6px 2px 6px;

    -fx-cursor: hand;
}

/*#endregion Buttons*/

